package com.randioo.tiger_server.protocol;

message RoleData{
	optional int32 roleId = 1;
	optional string name =2;
}

message TigerData{
	optional int32 reward=1;
	optional int32 fail=2;
}

message RowData{
	repeated int32 value = 1;
}
message RandomData{
	repeated RowData rowData = 1;	
}